# plot-test

./: CMakeLists.txt  dot-gen.pl
src/: CMakeLists.txt  main.cpp  plot.frag  plot.vert
